--- a/Selecao/Selecao-Web/src/main/resources/templates/login.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/login.html
@@ -5,14 +5,14 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
-        <link rel="stylesheet" th:href="@{/css/styleLogin.css}"/>
+        <link rel="stylesheet" th:href="@{/css/style.css}"/>
         <title>Login - ProjectJ</title>
     </head>
     <body>
         <div class="container">
             <div class="row">
                 <div class="col-md-12 ">
-                    <div class="panel panel-primary">
+                    <div class="panel panel-default">
                         <div class="panel-heading">
                             <div class="container-fluid">
                                 <a class="navbar-brand" href="#">Login</a>
@@ -23,13 +23,8 @@
                             <div class="alert alert-danger" th:if="${param.error}">
                                 Email ou senha inválidos.
                             </div>
-
                             <div class="alert alert-success" th:if="${param.logout}">
                                 Logout efetuado com sucesso.
-                            </div>
-                            
-                            <div class="alert alert-success" th:if="${param.cadastrar}">
-                                Cadastro efetuado com sucesso.
                             </div>
 
                             <form th:action="@{/login}" method="POST">
@@ -44,7 +39,6 @@
                                 <div class="form-group"><br/>
                                     <button type="submit" value="Sign In" class="btn btn-success">Entrar</button>
                                     <button type="reset" class="btn btn-primary">Limpar</button>
-                                    <a href="cadastrar"><button type="button" class="btn btn-default">Cadastrar</button></a>
                                 </div>
                             </form>
                         </div>
@@ -54,5 +48,6 @@
         </div>
         <script th:src="@{/js/jquery-2.2.3.min.js}" type="text/javascript"></script>
         <script th:src="@{/js/bootstrap.min.js}" type="text/javascript"></script>
+        <script th:src="@{/js/script.js}" type="text/javascript"></script>
     </body>
 </html>
