--- a/Selecao/Selecao-Web/src/main/resources/templates/Administrativo.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/Administrativo.html
@@ -6,12 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
         <link rel="stylesheet" th:href="@{/css/style.css}"/>
-        <title>Titulo do projeto</title>
+        <title>Titulo do Projeto</title>
     </head>
     <body>
         <div class="container">
             <div class="row">
-                
+                <p>Aqui é o dashboard do RH</p>
             </div>
         </div>
         <script th:src="@{/js/jquery-2.2.3.min.js}" type="text/javascript"></script>
