--- a/Selecao/Selecao-Web/src/main/resources/templates/Login.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/Login.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
         <link rel="stylesheet" th:href="@{/css/style.css}"/>
-        <title>Login - ProjectJ</title>
+        <title>Titulo do Projeto</title>
     </head>
     <body>
         <div class="container">
