--- a/Selecao/Selecao-Web/src/main/resources/templates/_InteressadoCadastro.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/_InteressadoCadastro.html
@@ -19,8 +19,10 @@
                             </div>
                         </div>
                         <div class="panel-body">
+                            
+                            <div th:include="_FormCadastroInteressado"></div>
 
-                            <form th:action="@{/cadastro}" method="POST">
+<!--                            <form th:action="@{/cadastro}" method="POST">
                                 <div class="form-group">
                                     <label>Nome</label>
                                     <input required="required" class="form-control" type="text" name="nome"/> 
@@ -46,7 +48,7 @@
                                     <button type="submit" value="Sign In" class="btn btn-success">Entrar</button>
                                     <button type="reset" class="btn btn-primary">Limpar</button>
                                 </div>
-                            </form>
+                            </form>-->
                         </div>
                     </div>
                 </div>
