--- a/Selecao/Selecao-Web/src/main/resources/templates/Login.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/Login.html
@@ -3,46 +3,36 @@
     <head>
         <meta charset="utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>    
         <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
         <link rel="stylesheet" th:href="@{/css/style.css}"/>
         <title>Titulo do Projeto</title>
     </head>
-    <body>
+    <body class="background-cinza">
         <div class="container">
             <div class="row">
-                <div class="col-md-12 ">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <div class="container-fluid">
-                                <a class="navbar-brand" href="#">Login</a>
-                            </div>
+                <div class="col-md-6 col-md-offset-3 content-wrapper">
+                    <form class="form-login" th:action="@{/login}" method="POST">
+                        <div class="panel panel-default text-center">
+                            <div class="panel-heading" id="form-nome-login">Projeto Crescer</div>
+                            <div class="panel-body"> <img src="http://www.cwi.com.br/Content/Site/img/logo_cwisoftware.png" id="logo-login"></img></div>
                         </div>
-                        <div class="panel-body">
-                            
-                            <div class="alert alert-danger" th:if="${param.error}">
-                                Email ou senha inválidos.
-                            </div>
-                            <div class="alert alert-success" th:if="${param.logout}">
-                                Logout efetuado com sucesso.
-                            </div>
-
-                            <form th:action="@{/login}" method="POST">
-                                <div class="form-group">
-                                    <label>Usuário</label>
-                                    <input required="required" class="form-control" type="text" name="username"/> 
-                                </div>
-                                <div class="form-group">
-                                    <label>Senha</label>
-                                    <input required="required" class="form-control" type="password" name="password"/> 
-                                </div>
-                                <div class="form-group"><br/>
-                                    <button type="submit" value="Sign In" class="btn btn-success">Entrar</button>
-                                    <button type="reset" class="btn btn-primary">Limpar</button>
-                                </div>
-                            </form>
+                        <div class="alert alert-danger" th:if="${param.error}">
+                            Email ou senha inválidos.
                         </div>
-                    </div>
+                        <div class="alert alert-success" th:if="${param.logout}">
+                            Logout efetuado com sucesso.
+                        </div>
+                        <div class="form-group">                                    
+                            <input required="required" class="form-control"  placeholder="Email" type="text" name="username"/>
+                        </div>
+                        <div class="form-group">                                    
+                            <input required="required" class="form-control" placeholder="Senha" type="password" name="password"/> 
+                        </div>
+                        <div class="col-md-12 text-center">
+                            <button type="submit" class="btn btn-default btn-login">Login</button>
+                        </div>
+                    </form>                    
                 </div>
             </div>
         </div>
