--- a/Selecao/Selecao-Web/src/main/resources/templates/Login.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/Login.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>    
         <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
-        <link rel="stylesheet" th:href="@{/css/style.css}"/>
+        <link rel="stylesheet" th:href="@{/css/login.css}"/>
         <title>Titulo do Projeto</title>
     </head>
     <body class="background-cinza">
