--- a/Selecao/Selecao-Web/src/main/resources/templates/Administrativo.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/Administrativo.html
@@ -3,19 +3,56 @@
     <head>
         <meta charset="utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
-        <link rel="stylesheet" th:href="@{/css/style.css}"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>        
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
+        <link rel="stylesheet" th:href="@{/css/menulateral.css}"/>
+        <link rel="stylesheet" th:href="@{/css/paginaadmin.css}"/>
         <title>Titulo do Projeto</title>
     </head>
     <body>
-        <div class="container">
-            <div class="row">
-                <p>Aqui é o dashboard do RH</p>
+        <div id="wrapper">
+            <div id="sidebar-wrapper" th:fragment="sidebar-wrapper">
+                <ul class="sidebar-nav">
+                    <li class="sidebar-brand text-center">
+                        <img src="http://www.cwi.com.br/Content/Site/img/logo_cwisoftware.png" class="img-responsive"></img>                
+                    </li>
+                    <li class="text-center div-perfil">
+                        <img class="img-circle img-perfil" src="http://unshelteredvoices.org/img/people/anon.jpg"/>
+                        <p sec:authentication="name" style="color:white;"></p>
+                    </li>
+                    <li>
+                        <a href="#" th:href="@{/home}">Lista de Candidatos</a>
+                    </li>
+                    <li>
+                        <a href="#" th:href="@{/amigos}">Nova Edição</a>
+                    </li>
+                     <li>
+                        <a href="#" th:href="@{/logout}">Sair</a>
+                    </li>
+                </ul>
             </div>
+            
+            <nav class="navbar navbar-default menu-nav">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#" id="menu-toggle">
+                        <span class="glyphicon glyphicon-align-justify"></span>
+                    </a>
+                </div>
+            </nav>  
+            
+            <div id="page-content-wrapper">
+                
+                <div class="container-fluid">
+                    <div class="row">
+                        
+                          
+                        
+                    </div>
+                </div>
+            </div> 
         </div>
         <script th:src="@{/js/jquery-2.2.3.min.js}" type="text/javascript"></script>
-        <script th:src="@{/js/bootstrap.min.js}" type="text/javascript"></script>
-        <script th:src="@{/js/script.js}" type="text/javascript"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
+        <script th:src="@{/js/slidemenu.js}" type="text/javascript"></script>
     </body>
 </html>
