--- a/Selecao/Selecao-Web/src/main/resources/templates/Administrativo.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/Administrativo.html
@@ -24,10 +24,10 @@
                         <span>PÁGINAS</span>
                     </li>
                     <li>
-                        <a href="#" th:href="@{/home}"><span class="glyphicon glyphicon-list icon-menu"></span>Lista de Candidatos</a>
+                        <a href="#" th:href="@{/listacandidato}"><span class="glyphicon glyphicon-list icon-menu"></span>Lista de Candidatos</a>
                     </li>
                     <li>
-                        <a href="#" th:href="@{/amigos}"><span class="glyphicon glyphicon-education icon-menu"></span>Nova Edição</a>
+                        <a href="#" th:href="@{/novaedicao}"><span class="glyphicon glyphicon-education icon-menu"></span>Nova Edição</a>
                     </li>
                      <li>
                         <a href="#" th:href="@{/logout}"><span class="glyphicon glyphicon-log-out icon-menu"></span>Sair</a>
