refactor(Sucesso): ajeitar estilo e mensagem de sucesso

--- a/Selecao/Selecao-Web/src/main/resources/templates/Sucesso.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/Sucesso.html
@@ -14,10 +14,10 @@
                 <div class="col-md-12"> 
                     <h1 class="text-center" style="color:white;">Sucesso</h1>
                     <div class="alert btn-login" th:if="${mensagemFormCadastro}">
-                        <p style="color:white;" class="text-center" th:text="${mensagemFormCadastro}"></p>
+                        <h3 style="color:white;" class="text-center" th:text="${mensagemFormCadastro}"></h3>
                     </div>
                     <div class="alert btn-login" th:if="${mensagemConfirmacaoEmail}">
-                        <p style="color:white;" th:text="${mensagemConfirmacaoEmail}"></p>
+                        <h3 style="color:white;" th:text="${mensagemConfirmacaoEmail}"></h3>
                     </div>                                         
                 </div>
             </div>
