feat(Candidatos): adicionar funcionalidade de filtros e paginação.

--- a/Selecao/Selecao-Web/src/main/resources/templates/fragments.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/fragments.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
         <link rel="stylesheet" th:href="@{/css/menulateral.css}"/>
         <link rel="stylesheet" th:href="@{/css/paginaadmin.css}"/>
+        <link rel="stylesheet" th:href="@{/css/candidato.css}"/>
         <title>Titulo do Projeto</title>
     </head>
     <body>
