--- a/Selecao/Selecao-Web/src/main/resources/templates/Administrativo.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/Administrativo.html
@@ -15,7 +15,7 @@
             
             <div id="page-content-wrapper">
                 <div class="container-fluid">
-                    <div class="row">
+                    <div class="row corpo">
                         
                           
                         
@@ -26,5 +26,6 @@
         <script th:src="@{/js/jquery-2.2.3.min.js}" type="text/javascript"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
         <script th:src="@{/js/slidemenu.js}" type="text/javascript"></script>
+        <script th:src="@{/js/scriptCandidato.js}" type="text/javascript"></script> 
     </body>
 </html>
