--- a/Selecao/Selecao-Web/src/main/resources/templates/nova-edicao.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/nova-edicao.html
@@ -18,7 +18,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-md-5 col-md-offset-3">
-                            <form role="form"  th:action="@{/cadastro-nova-edicao}" method="POST">
+                            <form id="nova-edicao-form" role="form"  th:action="@{/cadastro-nova-edicao}" method="POST">
                                 <div class="form-group">
                                   <label for="data">Data inicio de agendamento:</label>
                                   <input type="text" class="form-control input-data" placeholder="dd/mm/aaaa" name="inicioselecao" required="required"/>
@@ -51,8 +51,9 @@
         <script th:src="@{/js/jquery-2.2.3.min.js}" type="text/javascript"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js" type="text/javascript"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
+        <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js" type="text/javascript"></script>       
         <script th:src="@{/js/slidemenu.js}" type="text/javascript"></script>
         <script th:src="@{/js/datepicker.js}" type="text/javascript"></script>
-        
+        <script th:src="@{/js/validateNovaEdicao.js}" type="text/javascript"></script>
     </body>
 </html>
