refectory(listaEdicao) - refatorado lista de candidatos.

--- a/Selecao/Selecao-Web/src/main/resources/templates/_Candidatos.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/_Candidatos.html
@@ -1,15 +1,15 @@
 <form class="form-inline" id="pesq" th:attr="data-page=${pagina}">
     <div class="input-group col-xs-6 col-sm-5 col-md-3">
-        <input name="nome" id="txtNome" class="form-control" placeholder="Nome:" type="text"/> 
+        <input name="nome" id="txtNome" class="form-control"  th:value="${valorAntigoInput.nome}" placeholder="Nome:" type="text"/> 
     </div>
     <div class="input-group col-xs-5 col-sm-5 col-md-3">
-        <input name="email" id="txtEmail" class="form-control" placeholder="Email:" type="text"/> 
+        <input name="email" id="txtEmail" class="form-control" th:value="${valorAntigoInput.email}" placeholder="Email:" type="text"/> 
     </div>
     <div class="input-group col-xs-6 col-sm-5 col-md-2">
-        <input name="telefone" id="txtTelefone" class="form-control" placeholder="Telefone:" type="text"/> 
+        <input name="telefone" id="txtTelefone" th:value="${valorAntigoInput.telefone}" class="form-control" placeholder="Telefone:" type="text"/> 
     </div>
     <div class="input-group col-xs-5 col-sm-5 col-md-2">
-        <select class="form-control" id="txtStatus" name="status">
+        <select class="form-control" id="txtStatus" th:value="${valorAntigoInput.status}" name="status">
             <option value="" class="optionDisable">Status:</option>
             <option value="AGUARDANDO CONTATO">Aguardando Contato</option>
             <option value="ENTREVISTADO">Entrevistado</option>
@@ -17,7 +17,7 @@
         </select>
     </div>
     <div class="input-group col-xs-12 col-sm-1 col-md-1">
-        <button class="btn btn-default" type="submit">Filtrar!</button>
+        <button class="btn btn-default" type="submit">Filtrar</button>
     </div>
 </form>
 
