--- a/Selecao/Selecao-Web/src/main/resources/templates/fragments.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/fragments.html
@@ -24,10 +24,10 @@
                         <span>PÁGINAS</span>
                     </li>
                     <li>
-                        <a href="#" th:href="@{/listacandidato}"><span class="glyphicon glyphicon-list icon-menu"></span>Lista de Candidatos</a>
+                        <a href="#" data-url="/candidatos" class="opcao-side-bar" ><span class="glyphicon glyphicon-list icon-menu"></span>Lista de Candidatos</a>
                     </li>
                     <li>
-                        <a href="#" th:href="@{/novaedicao}"><span class="glyphicon glyphicon-education icon-menu"></span>Nova Edição</a>
+                        <a href="#"  data-url="/nova-edicao" class="opcao-side-bar" ><span class="glyphicon glyphicon-education icon-menu"></span>Nova Edição</a>
                     </li>
                      <li>
                         <a href="#" th:href="@{/logout}"><span class="glyphicon glyphicon-log-out icon-menu"></span>Sair</a>
