--- a/Selecao/Selecao-Web/src/main/resources/templates/Administrativo.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/Administrativo.html
@@ -26,6 +26,11 @@
         <script th:src="@{/js/jquery-2.2.3.min.js}" type="text/javascript"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
         <script th:src="@{/js/slidemenu.js}" type="text/javascript"></script>
-        <script th:src="@{/js/scriptCandidato.js}" type="text/javascript"></script> 
+        <script th:src="@{/js/mainView.js}" type="text/javascript"></script>
+        <script type="text/javascript">
+            new mainView({
+                $corpo:$('.corpo')
+            }).init();
+        </script>
     </body>
 </html>
