--- a/Selecao/Selecao-Web/src/main/resources/templates/nova-edicao.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/nova-edicao.html
@@ -1,59 +1,31 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
-    <head th:replace="fragments :: head">        
-        <title>Titulo do Projeto</title>
-    </head>
-    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/themes/ui-lightness/jquery-ui.min.css"/>
-    <body class="body-admin">
-        <div id="wrapper">
-            <div id="sidebar-wrapper"  th:replace="fragments :: sidebar-wrapper">
-                
-            </div>
-            
-            <nav class="navbar navbar-default menu-nav nav-admin"  th:replace="fragments :: nav">
-                
-            </nav>  
-            
-            <div id="page-content-wrapper">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-md-5 col-md-offset-3">
-                            <form id="nova-edicao-form" role="form"  th:action="@{/cadastro-nova-edicao}" method="POST">
-                                <div class="form-group">
-                                  <label for="data">Data inicio de agendamento:</label>
-                                  <input type="text" class="form-control input-data" placeholder="dd/mm/aaaa" name="inicioselecao" required="required"/>
-                                </div>
-                                <div class="form-group">
-                                  <label for="data">Data fim do processo seletivo:</label>
-                                  <input type="text" class="form-control input-data" placeholder="dd/mm/aaaa" name="finalselecao" required="required"/>
-                                </div>
-                                <div class="form-group">
-                                  <label for="data">Data inicio das aulas:</label>
-                                  <input type="text" class="form-control input-data" placeholder="dd/mm/aaaa" name="inicioaula" required="required"/>
-                                </div>
-                                <div class="form-group">
-                                  <label for="data">Data fim das aulas:</label>
-                                  <input type="text" class="form-control input-data" placeholder="dd/mm/aaaa" name="finalaula" required="required"/>
-                                </div>  
-                                <div class="form-group">
-                                  <label for="data">Edição:</label>
-                                  <input type="text" class="form-control" placeholder="dd/mm/aaaa" name="edicao" required="required"/>
-                                </div> 
-                               
-                                <button type="submit" class="btn btn-default">Salvar</button>
-                            </form>
-                        </div> 
-                    </div>
-                </div>
-            </div> 
+<div class="col-md-5 col-md-offset-3">
+    <form id="nova-edicao-form" data-url="/cadastro-nova-edicao" role="form"  method="POST">
+        <div class="form-group">
+          <label for="data">Data inicio de agendamento:</label>
+          <input type="text" class="form-control input-data" placeholder="dd/mm/aaaa" name="inicioselecao" required="required"/>
         </div>
-       
-        <script th:src="@{/js/jquery-2.2.3.min.js}" type="text/javascript"></script>
-        <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js" type="text/javascript"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
-        <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js" type="text/javascript"></script>       
-        <script th:src="@{/js/slidemenu.js}" type="text/javascript"></script>
-        <script th:src="@{/js/datepicker.js}" type="text/javascript"></script>
-        <script th:src="@{/js/validateNovaEdicao.js}" type="text/javascript"></script>
-    </body>
-</html>
+        <div class="form-group">
+          <label for="data">Data fim do processo seletivo:</label>
+          <input type="text" class="form-control input-data" placeholder="dd/mm/aaaa" name="finalselecao" required="required"/>
+        </div>
+        <div class="form-group">
+          <label for="data">Data inicio das aulas:</label>
+          <input type="text" class="form-control input-data" placeholder="dd/mm/aaaa" name="inicioaula" required="required"/>
+        </div>
+        <div class="form-group">
+          <label for="data">Data fim das aulas:</label>
+          <input type="text" class="form-control input-data" placeholder="dd/mm/aaaa" name="finalaula" required="required"/>
+        </div>  
+        <div class="form-group">
+          <label for="data">Ano edição:</label>
+          <input type="text" class="form-control" placeholder="aaaa" name="edicao" required="required"/>
+        </div> 
+        <div class="form-group">
+          <label for="data">Semestre edição:</label>
+          <input type="text" class="form-control"  name="edicao" required="required"/>
+        </div>
+        
+        <button type="submit" class="btn btn-default">Salvar</button>
+    </form>
+</div> 
+                  
