--- a/Selecao/Selecao-Web/src/main/resources/templates/_InteressadoCadastro.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/_InteressadoCadastro.html
@@ -19,36 +19,40 @@
                             </div>
                         </div>
                         <div class="panel-body">
-                            
+
+                            <ul th:if="${errors}">
+                                <li th:each="err : ${errors}" th:text="${err.message}"></li>
+                            </ul>
+
                             <div th:include="_FormCadastroInteressado"></div>
 
-<!--                            <form th:action="@{/cadastro}" method="POST">
-                                <div class="form-group">
-                                    <label>Nome</label>
-                                    <input required="required" class="form-control" type="text" name="nome"/> 
-                                </div>
-                                <div class="form-group">
-                                    <label>Email</label>
-                                    <input required="required" class="form-control" type="email" name="email"/> 
-                                </div>
-                                <div class="form-group">
-                                    <label>Instituição de Ensino</label>
-                                    <input required="required" class="form-control" type="text" name="instEnsino"/> 
-                                </div>
-                                <div class="form-group">
-                                    <label>Curso</label>
-                                    <input required="required" class="form-control" type="text" name="curso"/> 
-                                </div>
-                                <div class="form-group">
-                                    <label>Previsao Formatura</label>
-                                    <input required="required" class="form-control" type="date" name="prevFormatura"/> 
-                                </div>
-                                <div class="g-recaptcha" data-sitekey="6LcUhyMTAAAAABPX40yyDe8DzhWp3U8_N69d7lD6"></div>
-                                <div class="form-group"><br/>
-                                    <button type="submit" value="Sign In" class="btn btn-success">Entrar</button>
-                                    <button type="reset" class="btn btn-primary">Limpar</button>
-                                </div>
-                            </form>-->
+                            <!--                            <form th:action="@{/cadastro}" method="POST">
+                                                            <div class="form-group">
+                                                                <label>Nome</label>
+                                                                <input required="required" class="form-control" type="text" name="nome"/> 
+                                                            </div>
+                                                            <div class="form-group">
+                                                                <label>Email</label>
+                                                                <input required="required" class="form-control" type="email" name="email"/> 
+                                                            </div>
+                                                            <div class="form-group">
+                                                                <label>Instituição de Ensino</label>
+                                                                <input required="required" class="form-control" type="text" name="instEnsino"/> 
+                                                            </div>
+                                                            <div class="form-group">
+                                                                <label>Curso</label>
+                                                                <input required="required" class="form-control" type="text" name="curso"/> 
+                                                            </div>
+                                                            <div class="form-group">
+                                                                <label>Previsao Formatura</label>
+                                                                <input required="required" class="form-control" type="date" name="prevFormatura"/> 
+                                                            </div>
+                                                            <div class="g-recaptcha" data-sitekey="6LcUhyMTAAAAABPX40yyDe8DzhWp3U8_N69d7lD6"></div>
+                                                            <div class="form-group"><br/>
+                                                                <button type="submit" value="Sign In" class="btn btn-success">Entrar</button>
+                                                                <button type="reset" class="btn btn-primary">Limpar</button>
+                                                            </div>
+                                                        </form>-->
                         </div>
                     </div>
                 </div>
