--- a/Selecao/Selecao-Web/src/main/resources/templates/_Candidatos.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/_Candidatos.html
@@ -10,11 +10,11 @@
         <input name="telefone" id="txtTelefone" th:value="${valorAntigoInput.telefone}" class="form-control" placeholder="Telefone:" type="text"/> 
     </div>
     <div class="input-group col-xs-5 col-sm-5 col-md-2">
-        <select class="form-control" id="txtStatus" th:value="${valorAntigoInput.status}" name="status">
+        <select class="form-control" id="txtStatus" name="status">
             <option value="" class="optionDisable">Status:</option>
-            <option value="AGUARDANDO CONTATO">Aguardando Contato</option>
-            <option value="ENTREVISTADO">Entrevistado</option>
-            <option value="SEM INTERESS">Sem Interesse</option>
+            <option value="AGUARDANDO CONTATO" th:selected="${valorAntigoInput.status} == 'AGUARDANDO CONTATO'">Aguardando Contato</option>
+            <option value="ENTREVISTADO" th:selected="${valorAntigoInput.status} == 'ENTREVISTADO'">Entrevistado</option>
+            <option value="SEM INTERESS" th:selected="${valorAntigoInput.status} == 'SEM INTERESS'">Sem Interesse</option>
         </select>
     </div>
     <div class="input-group col-xs-12 col-sm-1 col-md-1">
@@ -37,11 +37,7 @@
     </div>
 </div>
 
-<ul class="pagination">
-    <li th:class="${candidatos.first} ? 'disabled' : ''">
-        <a class="btn-paginacao" data-url="/candidatos" href="#" th:attr="data-page= ${candidatos.first} ? null : ${pagina}-1">Anterior</a>
-    </li>
-    <li th:class="${candidatos.last} ? 'disabled' : ''">
-        <a class="btn-paginacao" data-url="/candidatos" href="#" th:attr="data-page= ${candidatos.last} ? null : ${pagina}+1">Próximo</a>
-    </li>
-</ul>
+<button  th:disabled="${candidatos.first}" class="btn-paginacao btn btn-default" data-url="/candidatos" href="#" th:attr="data-page= ${candidatos.first} ? null : ${pagina}-1">Anterior</button>
+<button th:disabled="${candidatos.last}" class="btn-paginacao btn btn-default" data-url="/candidatos" href="#" th:attr="data-page= ${candidatos.last} ? null : ${pagina}+1">Próximo</button>
+
+
