--- a/Selecao/Selecao-Web/src/main/resources/templates/_InteressadoCadastro.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/_InteressadoCadastro.html
@@ -21,7 +21,10 @@
                         <div class="panel-body">
 
                             <div th:if="${errors}">
-                                <div class="alert alert-danger" role="alert" th:each="err : ${errors}" >
+                                <div class="alert alert-danger alert-dismissible fade in" role="alert" th:each="err : ${errors}" >
+                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
                                     <span th:text="${err.defaultMessage}"></span>
                                 </div>
                             </div>
