Feat(Candidatos): alterar filtro para usar edição atual dinamicamente.

--- a/Selecao/Selecao-Web/src/main/resources/templates/fragments.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/fragments.html
@@ -42,6 +42,10 @@
                         <span class="glyphicon glyphicon-align-justify"></span>
                     </a>
                 </div>
+                <div class="nav navbar-nav navbar-right">
+                        <span class="edicao" th:text="${'Crescer - Edição '}"></span>
+                        <span id="edicao" th:text="${edicao}"></span>
+                </div>
             </nav>       
     </body>
 </html>
