--- a/Selecao/Selecao-Web/src/main/resources/templates/_entrevistas.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/_entrevistas.html
@@ -3,17 +3,16 @@
 </div>
 <div class="row">
     <div th:if="${not #lists.isEmpty(${entrevista})" th:each="entrevista : ${entrevista}" class="panel panel-default candidatoList">
-        <div class="panel-heading">
-            <p th:text="${candidato.idcandidato.nome}"></p>
+        <div class="col-md-3">
+            <div class="panel-heading text-center">
+                <p th:text="'Data: '+${entrevista.dataentrevista}"></p>
+            </div>
+            <div class="panel-body">
+                <button class="btn btn-default">Detalhes</button>
+            </div>
         </div>
-        <div class="panel-body">
-            <p th:text="'Telefone: ' + ${candidato.telefone}"></p>
-            <p th:text="'Idade: ' + (${#dates.format(candidato.datanascimento, 'yyyy')} - 1970)"></p>
-            <p th:text="'Email: ' + ${candidato.idcandidato.email}"></p>
-            <p th:text="'Status: ' + ${candidato.idcandidato.status}"></p>
-            <a th:href="${candidato.urllinkedin}">Linkedin</a>
-            <a th:href="${candidato.urllinkedin}">Ver Mais</a>
-            <a th:href="${candidato.urllinkedin}">Entrevistas</a>
-        </div>
+    </div>
+    <div th:if="${#lists.isEmpty(${entrevista})" class="col-md-6 col-md-offset-3">
+        <h2>Não há nenhuma entrevista para este usuário nesta edição</h2>        
     </div>
 </div>
