--- a/Selecao/Selecao-Web/src/main/resources/templates/Login.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/Login.html
@@ -14,8 +14,8 @@
                 <div class="col-md-6 col-md-offset-3 content-wrapper">
                     <form class="form-login" th:action="@{/login}" method="POST">
                         <div class="panel panel-default text-center">
-                            <div class="panel-heading" id="form-nome-login">Projeto Crescer</div>
-                            <div class="panel-body"> <img src="http://www.cwi.com.br/Content/Site/img/logo_cwisoftware.png" id="logo-login"></img></div>
+                            <div class="panel-heading" ><img src="/img/logo.png"/></div>
+                            <div class="panel-body" id="form-nome-login">Projeto Crescer </div>
                         </div>
                         <div class="alert alert-danger" th:if="${param.error}">
                             Email ou senha inválidos.
