--- a/Selecao/Selecao-Web/src/main/resources/templates/fragments.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/fragments.html
@@ -15,7 +15,7 @@
             <div id="sidebar-wrapper" th:fragment="sidebar-wrapper">
                 <ul class="sidebar-nav">
                     <li class="sidebar-brand text-center">
-                        <span id="logo-nome">Crescer</span><span id="logo-descricao">Inscrições</span>        
+                        <span id="logo-nome">Crescer</span><span id="logo-descricao">Seleção</span>        
                     </li>
                     <li class="text-center div-perfil">
                         <img class="img-circle img-perfil" th:src="@{${user.imagem}}"/>
